# essentia_wrapper

./: .gitattributes  CMakeLists.txt  Essentia Licensing.txt  README.md  Readme.md  version.h.in
cmake/: Toolchain-cross-mingw64-linux.cmake
res/: essentia-wrapper.rc
src/: essentia_wrapper.cpp  essentia_wrapper.h
src/essentia/: AllDetectionAlgorithms.cpp  AllDetectionAlgorithms.h  BeatDetectionAlgorithm.cpp  BeatDetectionAlgorithm.h  EssentiaAlgorithm.h  FadeDetectionAlgorithm.cpp  FadeDetectionAlgorithm.h  IEssentiaAlgorithm.h  OnsetDetectionAlgorithm.cpp  OnsetDetectionAlgorithm.h
src/essentia/configuration/: config_util.cpp  config_util.h
src/essentia/extractors/: streaming_extractorlowlevel.cpp  streaming_extractorlowlevel.h  streaming_extractorpostprocess.cpp  streaming_extractorpostprocess.h  streaming_extractorsfx.cpp  streaming_extractorsfx.h  streaming_extractortonal.cpp  streaming_extractortonal.h
src/essentia/loader/: AudioLoader.cpp  AudioLoader.h  EasyLoader.cpp  EasyLoader.h  EqloudLoader.cpp  EqloudLoader.h  MonoLoader.cpp  MonoLoader.h  StreamAudioLoader.cpp  StreamAudioLoader.h  StreamEasyLoader.cpp  StreamEasyLoader.h  StreamEqloudLoader.cpp  StreamEqloudLoader.h  StreamMonoLoader.cpp  StreamMonoLoader.h
src/essentia/standard/: StereoTrimmer.cpp  StereoTrimmer.h  StreamStereoTrimmer.cpp  StreamStereoTrimmer.h
src/essentia/writer/: YamlOutput.cpp  YamlOutput.h
